# static_aabb2d_index

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench_static_aabb2d_index.rs
examples/: build_and_query.rs  index_tree_structure.rs  nearest_neighbors.rs
src/: core.rs  lib.rs  static_aabb2d_index.rs
tests/: test.rs
