[package]
authors = ["Buck McCready <jbuckmccready@gmail.com>"]
categories = ["algorithms", "data-structures", "graphics", "mathematics"]
description = "Fast static spatial index data structure for 2D axis aligned bounding boxes"
edition = "2018"
keywords = ["algorithm", "2d", "computational", "geometry", "spatial"]
license = "MIT OR Apache-2.0"
name = "static_aabb2d_index"
repository = "https://github.com/jbuckmccready/static_aabb2d_index"
version = "0.7.0"

[features]
# allows for some selective use of unsafe for performance gains
unsafe_optimizations = []

[dependencies]
num-traits = "0.2"

[dev-dependencies]
# for benchmarks
criterion = "0.4"

[[bench]]
harness = false
name = "bench_static_aabb2d_index"
